--- a/client/package.json
+++ b/client/package.json
@@ -51,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "redux-devtools-extension": "^2.13.8"
   }
 }
