--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon server.js",
-    "build": "cd client && yarn install && yarn build",
+    "start": "node server.js",
+    "build": "cd client && npm install && npm run build",
     "test": "mocha \"./test/**/*.test.js\"",
     "test:watch": "onchange \"./**/*.js\" -i -k -- yarn run test"
   },
